Fix tooltip text issues on mobile

--- a/src/itemstack.css
+++ b/src/itemstack.css
@@ -30,7 +30,7 @@
   z-index: 1;
   position: fixed;
   border: 3px solid #23005a;
-  padding: 1px 10px 5px 5px;
+  padding: 7px 10px 5px 5px;
   background-color: rgba(15, 0, 15, 0.8);
   color: #fbfbfb;
   font-family: 'Minecraftia';
@@ -42,13 +42,10 @@
 }
 .item-display .item-info .item-meta {
   margin-top: 2px;
-  margin-bottom: -10px;
-}
-.item-display .item-info .item-meta:not(:last-child) {
-  margin-bottom: -14px;
+  line-height: 15px;
 }
 .item-display .item-info .item-meta.name {
-  margin-bottom: -10px;
+  line-height: 16px;
   color: #55FFFF;
   text-shadow: 2px 2px #3f3f3f;
   font-size: 15px;
